--- a/style.css
+++ b/style.css
@@ -1,2 +1,3 @@
 *{margin: 0px; padding: 0px;}
 #carta-texto{margin:20px;padding: 5px; width: 500px;}
+.newspaper{background-color: antiquewhite;font-family: 'Times New Roman', Times, serif;font-weight: bold;}
