--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 *{margin: 0px; padding: 0px;}
 #carta-texto{margin:20px;padding: 5px; width: 500px;}
+#criar-carta{margin: 20px 0;}
 .newspaper{background-color: antiquewhite;font-family: 'Times New Roman', Times, serif;font-weight: bold;}
+.magazine1{background-color: teal;color: white;font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 900;text-transform: uppercase;}
+.magazine2{background-image: url('images/pink-pattern.png'); color: fuchsia; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 900;}
+.medium{font-size: 20px; padding: 8px;}
+.big{font-size: 30px; padding: 10px;}
+.reallybig{font-size: 40px; padding: 15px;}
+.rotateleft{transform: rotate(-5deg);}
+.rotateright{transform: rotate(5deg);}
+.skewleft{transform: skewX(10deg);}
+.skewright{transform: skewX(-10deg);}
