project mistery letter - fim do dia

--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@
 .rotateright{transform: rotate(5deg);}
 .skewleft{transform: skewX(10deg);}
 .skewright{transform: skewX(-10deg);}
+span{display: inline-block;}
